# operational_systems

./: README.md
first/: bash.cmd  build.sh
first/hello_world/: CMakeLists.txt  Hello.cpp
hello_first/: build.sh
library_second/: main.cpp
logger_third/: log.txt
logger_third/counter/: counter.cpp
logger_third/input_handler/: input_handler.cpp
logger_third/logger/: logger.h
logger_third/spawner/: spawner.cpp  spawner.h
second/: background_launcher.cpp  background_launcher.h
temperature_logger/: CMakeLists.txt  DeviceSimulator.cpp
temperature_logger/client/: client.py
temperature_logger/client/templates/: index.html  plot.html
temperature_logger/include/: Logger.h  SerialReader.h  TemperatureProcessor.h
temperature_logger/server/: server.py
temperature_logger/src/: SerialReader.cpp  TemperatureProcessor.cpp  logger.cpp  main.cpp
temperature_logger_fourth/: simulator.c
temperature_monitor_fifth/: main.c
temperature_monitor_fifth/client/: app.py
temperature_monitor_fifth/client/templates/: index.html
temperature_monitor_fifth/server/src/: database.c  http_server.c  main.c  temperature.c
third/: main.cpp
third/counter/: counter.h
third/input_handler/: input_handler.h
third/logger/: logger.cpp
